--- a/public/css/emission.css
+++ b/public/css/emission.css
@@ -228,6 +228,8 @@ p.pseudo {
     font-family: 'Montserrat', sans-serif;
     margin-top: 20px;
     margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 18px;
     text-align: center;
     color: white;
