--- a/public/css/accueil.css
+++ b/public/css/accueil.css
@@ -213,7 +213,7 @@ h2.titre {
     #banniere {
         height: 300px;
         width: 100%;
-        background-image: url("../img/banniere_desktop.png");
+        background-image: url("../img/banniereBoutique_.png");
         background-size: cover;
         background-repeat: no-repeat;
     }
