--- a/public/css/admin_dashboard.css
+++ b/public/css/admin_dashboard.css
@@ -335,18 +335,26 @@ input[type="datetime-local"] {
 }
 
 /**list défis**/
-.createPoll {
+.createPoll > div {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 100%;
 }
+
 /**list concours**/
-.listChallenge {
+.listChallenge > div {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 100%;
+}
+
+.challengeTitle,
+.challengeDescription,
+.challengeEndTime,
+button {
+    margin: 10px 0;
 }
