--- a/public/css/accueil.css
+++ b/public/css/accueil.css
@@ -211,9 +211,9 @@ h2.titre {
     }
 
     #banniere {
-        height: 300px;
+        height: 100px;
         width: 100%;
-        background-image: url("../img/banniereBoutique.png");
+        background-image: url("../img/banniereBoutique.svg");
         background-size: cover;
         background-repeat: no-repeat;
     }
