--- a/public/css/accueil.css
+++ b/public/css/accueil.css
@@ -333,7 +333,7 @@ h2.titre {
         height: 100%;
         width: 100%;
         border : none;
-        background-image: url("../img/banniere_mobile.png") ;
+        background-image: url("../img/banniereBoutiqueMobile.png") ;
         background-size: cover;
         background-repeat: no-repeat;
     }
