--- a/public/css/accueil.css
+++ b/public/css/accueil.css
@@ -25,6 +25,9 @@ h1 {
     display: flex;
     flex-direction: row;
     width: 80%;
+    justify-content: space-evenly;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #plus-video {
