--- a/public/css/emission.css
+++ b/public/css/emission.css
@@ -13,7 +13,7 @@
 
     #direct-live {
         width: 700px!important;
-        height: auto !important;
+        height: 500px !important;
 
     }
 
@@ -54,8 +54,8 @@ h1.titre {
 }
 
 iframe {
-    width: 390px;
-    height: 220px;
+    width: 300px;
+    height: 250px;
     border: none;
 }
 
@@ -292,7 +292,7 @@ input[type="text"]::placeholder {
 }       
 
 #direct-live  {
-    width: 250px;
+    width: 300px;
     height: 250px;
 }
 
