--- a/public/css/admin_dashboard.css
+++ b/public/css/admin_dashboard.css
@@ -368,3 +368,10 @@ button {
     height: 100%;
     width: 100%;
 }
+
+#endContestForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
