--- a/public/css/admin_dashboard.css
+++ b/public/css/admin_dashboard.css
@@ -344,34 +344,7 @@ input[type="datetime-local"] {
 }
 
 /**list concours**/
-.listChallenge > div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-}
-
-.challengeTitle,
-.challengeDescription,
-.challengeEndTime,
-button {
-    margin: 10px 0;
-}
-
-.participations-container {
-    height: 100%;
-    overflow-y: auto;
-}
-
-.participations-grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 10px;
-    padding: 10px;
-}
-
-.container{
+div.container{
     width: 100%;
 }
 
@@ -379,10 +352,3 @@ button {
     height: 100%;
     width: 100%;
 }
-#endContestForm {
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    display: flex;
-}
-    
