--- a/public/css/admin_dashboard.css
+++ b/public/css/admin_dashboard.css
@@ -360,6 +360,6 @@ div.container{
 }
 
 #endContestForm > * {
-    flex-basis: calc(33.33% - 10px); /* Réglage pour 3 éléments par ligne */
-    margin-bottom: 10px;
+    flex-basis: 50%;
+    box-sizing: border-box;
 }
