--- a/public/css/admin_dashboard.css
+++ b/public/css/admin_dashboard.css
@@ -376,3 +376,9 @@ div.container{
     align-items: center;
   }
   
+.selectWinner{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
