--- a/public/css/admin_dashboard.css
+++ b/public/css/admin_dashboard.css
@@ -383,7 +383,7 @@ div.container{
     align-items: center;
 }
 
-.participations-container{
+.participationsContainer{
     display: flex;
     flex-direction: column;
     justify-content: center;
