--- a/public/css/admin_dashboard.css
+++ b/public/css/admin_dashboard.css
@@ -343,65 +343,47 @@ input[type="datetime-local"] {
     width: 100%;
 }
 
-/**list concours/challenge**/
-div.container{
+/**list concours**/
+.listChallenge > div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 100%;
+}
+
+.challengeTitle,
+.challengeDescription,
+.challengeEndTime,
+button {
+    margin: 10px 0;
 }
 
 .contestContent {
     height: 100%;
     width: 100%;
 }
-#endContestForm {
-    display: flex;
-    flex-wrap: wrap;
-}
 
-#endContestForm > * {
-    flex-basis: 50%;
-    box-sizing: border-box;
-}
-
-#contentContainer {
+.contentContainer {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    width: 100%;
 }
 
-.contest {
+.content {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-  }
-  
-.selectWinner{
-    display: flex;
-    flex-direction: row;
     justify-content: center;
-    align-items: center;
+    width: 100%;
 }
 
-.participationsContainer{
+.selectWinner {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
-}
-
-.listH2{
-    font-size: 2.5rem;
-    font-weight: bold;
-}
-
-.listH3{
-    font-size: 2rem;
-    font-weight: bold;
-}
-
-.listP{
-    font-size: 1.5rem;
-    font-weight: bold;
+    justify-content: center;
+    width: 100%;
 }
