--- a/public/css/admin_dashboard.css
+++ b/public/css/admin_dashboard.css
@@ -359,6 +359,14 @@ button {
     margin: 10px 0;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
 .submitContainer {
     display: flex;
     flex-direction: column;
