--- a/public/css/admin_dashboard.css
+++ b/public/css/admin_dashboard.css
@@ -344,11 +344,11 @@ input[type="datetime-local"] {
 }
 
 /**list concours**/
-.listContest > div {
+.listContest > * {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
     width: 100%;
 }
 
